More on tags (V)
- treeview for tags with RecursiveTreeItem
- load / save tag info in separate file
- some refactoring