@@ -91,6 +91,7 @@ dependencies {
     compile 'commons-io:commons-io:2.6'
     compile 'org.apache.commons:commons-lang3:3.9'
     compile group: 'org.apache.commons', name: 'commons-text', version: '1.8'
+    compile group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.14'
     
     // new look & feel for old code :-)
     // TFE, 20181209: not working with Java9+
@@ -138,6 +139,10 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.media/com.sun.media.jfxmedia.events=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+                '--add-exports', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
+                // TFE, 20200803: workaround for "WARNING: Illegal reflective access by com.rits.cloning.Cloner"
+                // https://github.com/x-stream/xstream/issues/101#issuecomment-667734663
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED',
     ]
     
 // extend Netbeans Gradle "Run" task
